# ORF_standalone

./: CMakeLists.txt  README.md  main.cpp  orf.cpp  orf.h  utils.cpp  utils.h
